// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getOneBrainAtomByRef given: [case2] atoms array is empty when: [t0] getOneBrainAtomByRef is called then: it throws BadRequestError with "no atoms available" 1`] = `
"BadRequestError: no atoms available in context

pass atoms via genContextBrain({ brains: { atoms: [...] } }) or ensure
brain packages are installed for discovery mode.

{
  "ref": {
    "repo": "__mock_repo__",
    "slug": "__mock_atom__",
    "description": "mocked brain atom for tests",
    "spec": {
      "cost": {
        "time": {
          "speed": {
            "tokens": 100,
            "per": {
              "seconds": 1
            }
          },
          "latency": {
            "milliseconds": 500
          }
        },
        "cash": {
          "per": "token",
          "input": "USD 0.000_003",
          "output": "USD 0.000_015",
          "cache": {
            "get": "USD 0.000_000_300",
            "set": "USD 0.000_003_750"
          }
        }
      },
      "gain": {
        "size": {
          "context": {
            "tokens": 200000
          }
        },
        "grades": {
          "swePro": 45.9,
          "gpqa": 68.4
        },
        "cutoff": "2025-04-01",
        "domain": "ALL",
        "skills": {
          "tooluse": true,
          "vision": true
        }
      }
    }
  }
}"
`;

exports[`getOneBrainAtomByRef given: [case3] atoms array does not contain matching atom when: [t0] getOneBrainAtomByRef is called with non-matching ref then: it throws BadRequestError with "brain atom not found" 1`] = `
"BadRequestError: brain atom not found: __mock_repo__/__mock_atom__

the atom was not registered in this context.
check that the atom is included in brains.atoms or that the brain
package is installed for discovery mode.

{
  "ref": {
    "repo": "__mock_repo__",
    "slug": "__mock_atom__",
    "description": "mocked brain atom for tests",
    "spec": {
      "cost": {
        "time": {
          "speed": {
            "tokens": 100,
            "per": {
              "seconds": 1
            }
          },
          "latency": {
            "milliseconds": 500
          }
        },
        "cash": {
          "per": "token",
          "input": "USD 0.000_003",
          "output": "USD 0.000_015",
          "cache": {
            "get": "USD 0.000_000_300",
            "set": "USD 0.000_003_750"
          }
        }
      },
      "gain": {
        "size": {
          "context": {
            "tokens": 200000
          }
        },
        "grades": {
          "swePro": 45.9,
          "gpqa": 68.4
        },
        "cutoff": "2025-04-01",
        "domain": "ALL",
        "skills": {
          "tooluse": true,
          "vision": true
        }
      }
    }
  }
}"
`;
